--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,7 @@ p {
     margin: 0 10px;
     padding: 0 30px;
     text-align: center;
+    box-shadow: 0 0 8px #ccc;
 }
 
 .container-header {
@@ -199,6 +200,19 @@ label {
 
 .theme-icon:hover {
     cursor: pointer;
+}
+
+.theme-dark-nav {
+    background-color: var(--clr-primary-darker);
+    color: #fff;
+}
+
+.theme-dark-form {
+    background-color: #054b81;
+}
+
+.theme-dark-container {
+    box-shadow: 0 0 8px #021b2f;
 }
 
 @media only screen and (max-width: 1200px) {
